objects/ASI_OCR_Archived_Document__c.object
<CustomObject>
    <fields>
        <fullName>ASI_OCR_Disputed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disputed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_OCR_Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duty</fullName>
                </value>
                <value>
                    <fullName>GRN</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>PO Supplier Invoice</fullName>
                </value>
                <value>
                    <fullName>SO DM</fullName>
                </value>
                <value>
                    <fullName>SO Export</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>INV</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_OCR_External_Key__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_OCR_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_OCR_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Payment__c.RecordType.Name</field>
                <operation>startsWith</operation>
                <value>OPEX</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Payment__c</referenceTo>
        <relationshipName>Logistic_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_OCR_Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_OCR_Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_OCR_SO_Number__c</fullName>
        <label>SO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_OCR_SYS_Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SYS Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_OCR_Supplier_Inv_Num__c</fullName>
        <label>Supplier Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_OCR_Tax_Inv_Num__c</fullName>
        <label>Tax Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_OCR_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Archived Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_OCR_External_Key__c</columns>
        <columns>ASI_OCR_Payment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_SG_Archived_Documents_Disputed</fullName>
        <columns>NAME</columns>
        <columns>ASI_OCR_Document_Type__c</columns>
        <columns>ASI_OCR_Supplier_Inv_Num__c</columns>
        <columns>ASI_OCR_PO_Number__c</columns>
        <columns>ASI_OCR_Reference_Number__c</columns>
        <columns>ASI_OCR_Disputed__c</columns>
        <columns>ASI_OCR_Verified__c</columns>
        <columns>ASI_OCR_Remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_OCR_Disputed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All SG Archived Documents (Disputed)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_SG_Archived_Documents_Unverified</fullName>
        <columns>NAME</columns>
        <columns>ASI_OCR_Document_Type__c</columns>
        <columns>ASI_OCR_Supplier_Inv_Num__c</columns>
        <columns>ASI_OCR_PO_Number__c</columns>
        <columns>ASI_OCR_Tax_Inv_Num__c</columns>
        <columns>ASI_OCR_SO_Number__c</columns>
        <columns>ASI_OCR_Reference_Number__c</columns>
        <columns>ASI_OCR_Disputed__c</columns>
        <columns>ASI_OCR_Verified__c</columns>
        <columns>ASI_OCR_Remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_OCR_Verified__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All SG Archived Documents (Unverified)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_SG_Archived_Documents_Verified</fullName>
        <columns>NAME</columns>
        <columns>ASI_OCR_Document_Type__c</columns>
        <columns>ASI_OCR_Supplier_Inv_Num__c</columns>
        <columns>ASI_OCR_PO_Number__c</columns>
        <columns>ASI_OCR_SO_Number__c</columns>
        <columns>ASI_OCR_Verified__c</columns>
        <columns>ASI_OCR_Remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_OCR_Verified__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All SG Archived Documents (Verified)</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DOCA-{0000000}</displayFormat>
        <label>Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archived Documents</pluralLabel>
    <recordTypes>
        <fullName>ASI_OCR_SG_Archived_Document</fullName>
        <active>true</active>
        <label>OCR SG Archived Document</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>